--- a/templates/maas-server-interfaces.tmpl
+++ b/templates/maas-server-interfaces.tmpl
@@ -6,16 +6,11 @@
 # The loopback network interface
 auto lo
 iface lo inet loopback
+  dns-nameservers @DNS_NS@
+  dns-search @MAAS_DOMAIN@
 
 auto eth0
 iface eth0 inet static
   address @MAAS_PRIV_IP@
   netmask @PRIV_NETMASK@
-
-auto eth1
-iface eth1 inet static
-  address @MAAS_PUB_IP@
-  netmask @PUB_NETMASK@
-  gateway @PUB_GW@
-  dns-nameservers @DNS_NS@
-  dns-search maas
+  gateway @PRIV_GW@
